--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,6 +24,7 @@ hr {
 #header{
     margin: 0px 0px;
     width: 500px;
+    //font-family: Arial, Helvetica, sans-serif;
     position:fixed;
     z-index:2;
 	text-align:right;
